--- a/examples/webui/bower.json
+++ b/examples/webui/bower.json
@@ -8,7 +8,8 @@
     "paper-elements": "PolymerElements/paper-elements#^1.0.1",
     "platinum-elements": "PolymerElements/platinum-elements#^1.1.0",
     "polymer": "Polymer/polymer#^1.2.0",
-    "angular": "~1.4.9"
+    "angular": "~1.4.9",
+    "polymer-themes": "~1.0.1"
   },
   "devDependencies": {
     "web-component-tester": "*"
